-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
None
-
c2af0f60d4c7fba83d1bd057451e2f0a1b6f2d60
I need to translate as follows:
Expected 'X' but got 'Y' = An dùil ri “X” ach fhuaras “Y”
Unexpected 'Z' - “Z” air nach robh dùil
Please use placeholders here and let the localizers decide with quotation marks to use.
Located in qtbase.ts:
<context> <name>QXml</name> <message> <location line="+40"/> <source>Expected </source> <translation type="unfinished"/> </message> <message> <location line="+11"/> <source>, but got '</source> <translation type="unfinished"/> </message> <message> <location line="+4"/> <source>Unexpected '</source> <translation type="unfinished"/> </message>
For Gerrit Dashboard: QTBUG-60159 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
191662,5 | QXmlStream: resolve puzzle in translatable strings | dev | qt/qtbase | Status: MERGED | +2 | 0 |