QXmlStream: resolve puzzle in translatable strings

Task-number: QTBUG-60159
Change-Id: I4cc83f50d38205eb2996d4122d487d07cc3d8677
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
Reviewed-by: GunChleoc <fios@foramnagaidhlig.net>